* documentation update * declare mongo-java-driver dependency as provided - so no need to exclude that dependency in projects * reverting some generic declaration changes made in version 2.5.0 in RefelctionCodec that may interfere with legacy code

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,8 @@
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
             <version>${mongo-java-driver.version}</version>
+            <!--make sure to include the mongo-java-driver in your project minimal version 3.7.0-->
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
