--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.4.RELEASE</version>
+        <version>2.5.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -51,7 +51,6 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
 
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <mongo-java-driver.version>4.1.0</mongo-java-driver.version>
         <slf4j.version>1.7.25</slf4j.version>
         <testcontainers.version>1.15.3</testcontainers.version>
     </properties>
