running tests with jdk 17 - fixing problems with access rights

--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
 
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <slf4j.version>1.7.25</slf4j.version>
-        <testcontainers.version>1.15.3</testcontainers.version>
+        <testcontainers.version>1.17.6</testcontainers.version>
     </properties>
 
     <dependencyManagement>
@@ -136,7 +136,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <scope>compile</scope>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
